--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploym
 
 on:
   push:
@@ -6,16 +6,28 @@ on:
       - master
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.6]
 
     steps:
     - uses: actions/checkout@v3
-    - name: executing remote ssh commands using password
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.10  # Используйте версию Python, соответствующую вашему серверу
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run tests
+      run: python manage.py test
+
+  deploy:
+    needs: test  # Этот шаг будет выполняться только после успешного прохождения тестов
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Deploy to Server
       uses: appleboy/ssh-action@master
       with:
         host: 167.71.51.222
@@ -23,9 +35,9 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: 22
         script: |
-          cd /root/backbot/
-          source ./venv/bin/activate
-          git pull
+          cd /path/to/your/django/project
+          source venv/bin/activate
+          git pull origin master
           python manage.py migrate
           python manage.py collectstatic --noinput
           supervisorctl restart all
