--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10  # Используйте версию Python, соответствующую вашему серверу
+        python-version: '3.8' 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -23,7 +23,7 @@ jobs:
       run: python manage.py test
 
   deploy:
-    needs: test  # Этот шаг будет выполняться только после успешного прохождения тестов
+    needs: test 
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
